// Courier Management System - ER Diagram
// Paste this code at https://dbdiagram.io/d to generate the ER diagram

Table Users {
  user_id int [pk, increment]
  name varchar(100) [not null]
  email varchar(100) [unique, not null]
  phone varchar(20)
  address text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table Admins {
  admin_id int [pk, increment]
  name varchar(100) [not null]
  email varchar(100) [unique, not null]
  phone varchar(20)
  role varchar(50) [default: 'Manager']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table Couriers {
  courier_id int [pk, increment]
  customer_id int [not null]
  managed_by_admin_id int
  bill_number varchar(50) [unique, not null]
  pickup_address text [not null]
  delivery_address text [not null]
  status varchar(20) [not null, default: 'Pending']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Note: 'status: Pending, In Transit, Delivered, Cancelled'
}

Table Delivery_History {
  history_id int [pk, increment]
  courier_id int [not null]
  old_status varchar(50)
  new_status varchar(50)
  changed_at timestamp [default: `CURRENT_TIMESTAMP`]
  changed_by_admin_email varchar(100)
  
  Note: 'Populated by UpdateCourierStatus stored procedure'
}

Table Courier_Audit {
  audit_id int [pk, increment]
  courier_id int [not null]
  action_type varchar(50) [not null]
  old_status varchar(50)
  new_status varchar(50)
  changed_at timestamp [default: `CURRENT_TIMESTAMP`]
  admin_email varchar(100)
  
  Note: 'Populated by trigger. action_type: CREATE, UPDATE_STATUS, DELETE'
}

Table Comments {
  comment_id int [pk, increment]
  courier_id int [not null]
  user_id int
  comment_text text [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

// Relationships
Ref: Users.user_id < Couriers.customer_id
Ref: Admins.admin_id < Couriers.managed_by_admin_id
Ref: Couriers.courier_id < Delivery_History.courier_id
Ref: Couriers.courier_id < Courier_Audit.courier_id
Ref: Couriers.courier_id < Comments.courier_id
Ref: Users.user_id < Comments.user_id
